# golden-tree-lucas-penido

./: .gitignore  README.md  coins_to_track.csv  crypto_tracker.py  main.py  pyproject.toml
tests/: test_crypto_tracker.py
