[project]
name = "golden-tree-lucas-peindo"
version = "0.1.0"
description = ""
authors = [
    {name = "Lucas Penido", email = "lpenido1@gmail.com"}
]

requires-python = ">=3.9"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
